--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,16 @@
-asd
+body {
+    margin: 0px;
+}
+
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+}
+
+header, section, nav, main, article {
+    display: block;
+    width: 100vw;
+    padding: 15px;
+    text-align: center;
+}
