--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,71 @@
-body {
-    margin: 0px;
-}
-
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing:border-box;
     box-sizing:border-box;
 }
 
-header, section, nav, main, article {
+body {
+    margin: 0px;
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
-    padding: 15px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+    header, nav, main, section, article {
+        width: 100vw;
+        padding: 15px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    section, article {
+        width: 50vw;
+    }
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+    header, section, nav, main, article {
+        width: 100vw;
+        padding: 15px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+    header, nav, main, section, article {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 15px;
+    }
+    nav {
+        width: 100vw;
+    }
+    body {
+        width: 960px;
+        margin: 0 auto;
+    }
+    article {
+        width: 33.333333%;
+    }
+    header {
+        height: 400px;
+        width: 100vw;
+    }
+    section {
+        height: 200px;
+        order: 1;
+        width: 100vw;
+    }
+    main {
+        order: 2;
+        width: 100vw;
+    }
 }
 
 nav {
